--- a/Notebook/path/ed-donner_llm/week2/day2_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week2/day2_ja.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Gradioの日！\n",
     "\n",
-    "今日は、とてつもなくシンプルなグレードフレームワークを使用してユーザーインターフェイスを構築します。喜びの準備をしてください！\n",
+    "今日は、とてつもなくシンプルなGradioフレームワークを使用してUIを構築します。喜びの準備をしてください！\n",
     "\n",
     "注：Gradioの画面は、コンピューターの設定に応じて「ダークモード」または「ライトモード」で表示される場合があります。\n",
     "\n",
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "# グラデーションのシンプルな。これは「ライトモード」に表示される可能性があります - これを後でダークモードで作成する方法を示します。\n",
+    "# Gradioのシンプルな。これは「ライトモード」に表示される可能性があります - これを後でダークモードで作成する方法を示します。\n",
     "\n",
     "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\").launch()"
    ]
