--- a/Notebook/path/ed-donner_llm/week3/day4_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day4_ja.ipynb
@@ -1,39 +1,39 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "id": "61f56afc-bc15-46a4-8eb1-d940c332cf52",
-      "metadata": {},
-      "source": [
-        "# モデル\n",
-        "\n",
-        "そして今 - このコラブは、変圧器ライブラリの心（または脳？）を明らかにします - モデル：\n",
-        "\n",
-        "https://colab.research.google.com/drive/1hhr9z-yqjue7pjjvqw4c74z_v3vchly?usp=sharing\n",
-        "\n",
-        "これは、低コストまたは無料のT4ボックスでうまく実行されるはずです。"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.11"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "61f56afc-bc15-46a4-8eb1-d940c332cf52",
+   "metadata": {},
+   "source": [
+    "# モデル\n",
+    "\n",
+    "そして今、このColabでは Transformers ライブラリの心臓部 (あるいは頭脳) であるモデルが公開されます。\n",
+    "\n",
+    "https://colab.research.google.com/drive/1hhR9Z-yiqjUe7pJjVQw4c74z_V3VchLy?usp=sharing\n",
+    "\n",
+    "これは、低コストまたは無料のT4ボックスでうまく実行されるはずです。"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
