--- a/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
@@ -210,7 +210,7 @@
     "LLAMA = \"meta-llama/Meta-Llama-3.1-8B-Instruct\"\n",
     "PHI3 = \"microsoft/Phi-3-mini-4k-instruct\"\n",
     "GEMMA2 = \"google/gemma-2-2b-it\"\n",
-    "QWEN2 = \"Qwen/Qwen2-7B-Instruct\"\n",
+    "QWEN2 = \"Qwen/Qwen2-7B-Instruct\" # あなたのためのエクササイズ\n",
     "MIXTRAL = \"mistralai/Mixtral-8x7B-Instruct-v0.1\" # これがGPUメモリに合わない場合は、Hubから他を試してみてください"
    ]
   },
@@ -285,10 +285,10 @@
     "# 量子化構成\n",
     "# BitsAndBytesConfig という設定クラスを使って、量子化（Quantization）されたモデルをメモリにロード\n",
     "quant_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True,                         # 4bit 量子化を有効にする\n",
-    "    bnb_4bit_use_double_quant=True,            # 二重量子化（double quantization）を使う\n",
-    "    bnb_4bit_compute_dtype=torch.bfloat16,     # 計算時の内部精度を bfloat16 に設定\n",
-    "    bnb_4bit_quant_type=\"nf4\"                  # 量子化方式に \"nf4\" を選ぶ\n",
+    "    load_in_4bit=True,                         # 4bit 量子化を有効にするとメモリ使用量が劇的に削減される。\n",
+    "    bnb_4bit_use_double_quant=True,            # 二重量子化は量子化の誤差をさらに圧縮し精度劣化を最小限に抑える\n",
+    "    bnb_4bit_compute_dtype=torch.bfloat16,     # 計算時の内部精度を bfloat16 に設定し誤差低減、メモリ効率向上\n",
+    "    bnb_4bit_quant_type=\"nf4\"                  # 正規分布ベースの量子化形式を用いることで精度の低下が抑える\n",
     ")"
    ]
   },
@@ -1396,10 +1396,29 @@
     }
    ],
    "source": [
+    "# Gemmaはシステム・プロンプトをサポートしていないらしい。\n",
     "messages = [\n",
     "    {\"role\": \"user\", \"content\": \"Tell a light-hearted joke for a room of Data Scientists\"}\n",
     "  ]\n",
     "generate(GEMMA2, messages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## エクササイズ（QWEN2、MIXTRAL）\n",
+    "- QWEN2 = \"Qwen/Qwen2-7B-Instruct\"\n",
+    "- MIXTRAL = \"mistralai/Mixtral-8x7B-Instruct-v0.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ..."
    ]
   }
  ],
