--- a/Notebook/path/ed-donner_llm/week4/day3_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week4/day3_ja.ipynb
@@ -107,7 +107,7 @@
     "openai = OpenAI()\n",
     "#claude = anthropic.Anthropic()\n",
     "OPENAI_MODEL = \"gpt-4.1\" # \"gpt-4o\" # コーディングが得意な新モデル「GPT-4.1」\n",
-    "#CLAUDE_MODEL = \"claude-3-5-sonnet-20240620\"\n",
+    "#CLAUDE_MODEL = \"claude-3-5-sonnet-20240620\" # コーディングが、かなり得意らしい。\n",
     "\n",
     "# コストを非常に低く保ちたいですか？\n",
     "#（生成コードでコンパイルエラー出るので高コストを使ったほうが良いかも。\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# messages\n",
+    "# messages = system_message + user_prompt_for(x)\n",
     "def messages_for(python):\n",
     "    return [\n",
     "        {\"role\": \"system\", \"content\": system_message},\n",
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimized.cppというファイルに書き込みます\n",
+    "# *.cppファイルに書き込みます\n",
     "def write_output(cpp, name):\n",
     "    code = cpp.replace(\"```cpp\",\"\").replace(\"```\",\"\")\n",
     "    with open(name + \".cpp\", \"w\") as f:\n",
@@ -199,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7cd84ad8-d55c-4fe0-9eeb-1895c95c4a9d",
+   "execution_count": null,
+   "id": "98e0f817-31ef-4d6d-8249-9a9e83c4ee7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a1cbb778-fa57-43de-b04b-ed523f396c38",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7fe1cd4b-d2c5-4303-afed-2115a3fef200",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Result: 3.141592658589\n",
-      "Execution Time: 36.423528 seconds\n"
+      "Execution Time: 24.583790 seconds\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "105db6f9-343c-491d-8e44-3a5328b81719",
    "metadata": {},
    "outputs": [
@@ -302,32 +302,32 @@
       "#include <iomanip>\n",
       "#include <chrono>\n",
       "\n",
-      "// Fast calculation using double for all intermediates\n",
-      "double calculate(long long iterations, double param1, double param2) {\n",
-      "    double result = 1.0;\n",
-      "    for (long long i = 1; i <= iterations; ++i) {\n",
-      "        double j1 = i * param1 - param2;\n",
-      "        result -= 1.0 / j1;\n",
-      "        double j2 = i * param1 + param2;\n",
-      "        result += 1.0 / j2;\n",
-      "    }\n",
-      "    return result;\n",
-      "}\n",
-      "\n",
       "int main() {\n",
-      "    using namespace std::chrono;\n",
-      "    auto start_time = high_resolution_clock::now();\n",
+      "    using namespace std;\n",
+      "    using namespace chrono;\n",
       "\n",
-      "    double result = calculate(100000000LL, 4.0, 1.0) * 4.0;\n",
+      "    const int iterations = 100000000;\n",
+      "    const int param1 = 4;\n",
+      "    const int param2 = 1;\n",
+      "    double result = 1.0;\n",
       "\n",
-      "    auto end_time = high_resolution_clock::now();\n",
-      "    double elapsed = duration_cast<duration<double>>(end_time - start_time).count();\n",
+      "    auto start = high_resolution_clock::now();\n",
       "\n",
-      "    std::cout << std::fixed << std::setprecision(12)\n",
-      "              << \"Result: \" << result << '\\n'\n",
-      "              << \"Execution Time: \" << std::setprecision(6)\n",
-      "              << elapsed << \" seconds\" << std::endl;\n",
+      "    for (int i = 1; i <= iterations; ++i) {\n",
+      "        double j1 = static_cast<double>(i) * param1 - param2;\n",
+      "        result -= (1.0 / j1);\n",
+      "        double j2 = static_cast<double>(i) * param1 + param2;\n",
+      "        result += (1.0 / j2);\n",
+      "    }\n",
       "\n",
+      "    result *= 4.0;\n",
+      "\n",
+      "    auto end = high_resolution_clock::now();\n",
+      "    double elapsed = duration_cast<duration<double>>(end - start).count();\n",
+      "\n",
+      "    cout << fixed << setprecision(12);\n",
+      "    cout << \"Result: \" << result << endl;\n",
+      "    cout << \"Execution Time: \" << setprecision(6) << elapsed << \" seconds\" << endl;\n",
       "    return 0;\n",
       "}"
      ]
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4194e40c-04ab-4940-9d64-b4ad37c5bb40",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
      "output_type": "stream",
      "text": [
       "Result: 3.141592658589\n",
-      "Execution Time: 0.305583 seconds\n"
+      "Execution Time: 0.252126 seconds\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "c3b497b3-f569-420e-b92e-fb0f49957ce0",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "dab5e4bc-276c-4555-bd4c-12c699d5e899",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
      "output_type": "stream",
      "text": [
       "Total Maximum Subarray Sum (20 runs): 10980\n",
-      "Execution Time: 127.486191 seconds\n"
+      "Execution Time: 106.575778 seconds\n"
      ]
     }
    ],
@@ -475,50 +475,56 @@
       "#include <vector>\n",
       "#include <cstdint>\n",
       "#include <chrono>\n",
-      "#include <limits>\n",
       "#include <iomanip>\n",
+      "#include <limits>\n",
       "\n",
+      "// Fast LCG generator\n",
       "class LCG {\n",
       "public:\n",
-      "    LCG(uint32_t seed, uint32_t a = 1664525, uint32_t c = 1013904223, uint64_t m = uint64_t(1)<<32)\n",
-      "        : value(seed), a(a), c(c), m(m) {}\n",
-      "    uint32_t next() {\n",
-      "        value = (uint64_t(a) * value + c) % m;\n",
+      "    using uint32 = uint32_t;\n",
+      "    static constexpr uint32 a = 1664525;\n",
+      "    static constexpr uint32 c = 1013904223;\n",
+      "    static constexpr uint64_t m = uint64_t(1) << 32;\n",
+      "\n",
+      "    explicit LCG(uint32 seed): value(seed) {}\n",
+      "\n",
+      "    uint32 next() {\n",
+      "        value = a * value + c;\n",
       "        return value;\n",
       "    }\n",
+      "\n",
       "private:\n",
-      "    uint64_t value;\n",
-      "    uint32_t a, c;\n",
-      "    uint64_t m;\n",
+      "    uint32 value;\n",
       "};\n",
       "\n",
       "int64_t max_subarray_sum(int n, uint32_t seed, int min_val, int max_val) {\n",
       "    LCG lcg(seed);\n",
-      "    int64_t range = int64_t(max_val) - int64_t(min_val) + 1;\n",
-      "    std::vector<int64_t> random_numbers(n);\n",
-      "    for (int i = 0; i < n; ++i)\n",
-      "        random_numbers[i] = int64_t(lcg.next()) % range + min_val;\n",
-      "\n",
-      "    int64_t max_sum = std::numeric_limits<int64_t>::min();\n",
+      "    std::vector<int> arr;\n",
+      "    arr.reserve(n);\n",
+      "    int range = max_val - min_val + 1;\n",
       "    for (int i = 0; i < n; ++i) {\n",
-      "        int64_t current_sum = 0;\n",
+      "        arr.push_back(static_cast<int>(lcg.next() % range) + min_val);\n",
+      "    }\n",
+      "    int64_t max_sum = std::numeric_limits<int64_t>::min();\n",
+      "    // Brute-force as in the python code\n",
+      "    for (int i = 0; i < n; ++i) {\n",
+      "        int64_t curr_sum = 0;\n",
       "        for (int j = i; j < n; ++j) {\n",
-      "            current_sum += random_numbers[j];\n",
-      "            if (current_sum > max_sum)\n",
-      "                max_sum = current_sum;\n",
+      "            curr_sum += arr[j];\n",
+      "            if (curr_sum > max_sum) max_sum = curr_sum;\n",
       "        }\n",
       "    }\n",
       "    return max_sum;\n",
       "}\n",
       "\n",
       "int64_t total_max_subarray_sum(int n, uint32_t initial_seed, int min_val, int max_val) {\n",
-      "    int64_t total_sum = 0;\n",
+      "    int64_t total = 0;\n",
       "    LCG lcg(initial_seed);\n",
       "    for (int i = 0; i < 20; ++i) {\n",
       "        uint32_t seed = lcg.next();\n",
-      "        total_sum += max_subarray_sum(n, seed, min_val, max_val);\n",
+      "        total += max_subarray_sum(n, seed, min_val, max_val);\n",
       "    }\n",
-      "    return total_sum;\n",
+      "    return total;\n",
       "}\n",
       "\n",
       "int main() {\n",
@@ -527,13 +533,15 @@
       "    int min_val = -10;\n",
       "    int max_val = 10;\n",
       "\n",
-      "    auto start = std::chrono::high_resolution_clock::now();\n",
+      "    auto start = std::chrono::steady_clock::now();\n",
       "    int64_t result = total_max_subarray_sum(n, initial_seed, min_val, max_val);\n",
-      "    auto end = std::chrono::high_resolution_clock::now();\n",
-      "    double elapsed = std::chrono::duration<double>(end - start).count();\n",
+      "    auto end = std::chrono::steady_clock::now();\n",
       "\n",
-      "    std::cout << \"Total Maximum Subarray Sum (20 runs): \" << result << std::endl;\n",
-      "    std::cout << \"Execution Time: \" << std::fixed << std::setprecision(6) << elapsed << \" seconds\" << std::endl;\n",
+      "    std::chrono::duration<double> elapsed = end - start;\n",
+      "\n",
+      "    std::cout << \"Total Maximum Subarray Sum (20 runs): \" << result << \"\\n\";\n",
+      "    std::cout << \"Execution Time: \" << std::fixed << std::setprecision(6)\n",
+      "              << elapsed.count() << \" seconds\" << std::endl;\n",
       "    return 0;\n",
       "}\n",
       "```"
@@ -556,7 +564,7 @@
      "output_type": "stream",
      "text": [
       "Total Maximum Subarray Sum (20 runs): 10980\n",
-      "Execution Time: 0.895282 seconds\n"
+      "Execution Time: 0.811339 seconds\n"
      ]
     }
    ],
@@ -654,6 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# optimize_gptのGUI版\n",
     "def stream_gpt(python):    \n",
     "    stream = openai.chat.completions.create(model=OPENAI_MODEL, messages=messages_for(python), stream=True)\n",
     "    reply = \"\"\n",
@@ -665,11 +674,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8669f56b-8314-4582-a167-78842caea131",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# optimize_claudeのGUI版\n",
     "def stream_claude(python):\n",
     "    result = claude.messages.stream(\n",
     "        model=CLAUDE_MODEL,\n",
@@ -686,16 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2f1ae8f5-16c8-40a0-aa18-63b617df078d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Gradioから実行するコントローラ\n",
     "def optimize(python, model):\n",
     "    if model==\"GPT\":\n",
     "        result = stream_gpt(python)\n",
-    "    elif model==\"Claude\":\n",
-    "        result = stream_claude(python)\n",
+    "    #elif model==\"Claude\":\n",
+    "    #    result = stream_claude(python)\n",
     "    else:\n",
     "        raise ValueError(\"Unknown model\")\n",
     "    for stream_so_far in result:\n",
@@ -704,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "f1ddb38e-6b0a-4c37-baa4-ace0b7de887a",
    "metadata": {},
    "outputs": [
@@ -732,7 +743,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -760,11 +771,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "19bf2bff-a822-4009-a539-f003b1651383",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 入力されたpythonコードを実行する\n",
     "def execute_python(code):\n",
     "    try:\n",
     "        output = io.StringIO()\n",
@@ -777,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "77f3ab5d-fcfb-4d3f-8728-9cacbf833ea6",
    "metadata": {},
    "outputs": [],
@@ -785,23 +797,24 @@
     "# プラットフォームのC++コードをコンパイルするために、トライブロックのコードを変更\n",
     "# 最適化されたC++コードをコンパイルおよび実行するUbuntuバージョン：\n",
     "def execute_cpp(code):\n",
-    "        write_output(code, \"optimize_x_pg\")\n",
-    "        try:\n",
-    "            # M1 Mac\n",
-    "            #compile_cmd = [\"clang++\", \"-Ofast\", \"-std=c++17\", \"-march=armv8.5-a\", \"-mtune=apple-m1\", \"-mcpu=apple-m1\", \"-o\", \"optimize_x_pg\", \"optimize_x_pg.cpp\"]\n",
-    "            # Ubuntu\n",
-    "            compile_cmd = [\"g++\", \"-O2\", \"-o\", \"optimize_x_pg\", \"optimize_x_pg.cpp\"]\n",
-    "            compile_result = subprocess.run(compile_cmd, check=True, text=True, capture_output=True)\n",
-    "            run_cmd = [\"./optimize_x_pg\"]\n",
-    "            run_result = subprocess.run(run_cmd, check=True, text=True, capture_output=True)\n",
-    "            return run_result.stdout\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            return f\"An error occurred:\\n{e.stderr}\""
+    "    code_name = \"optimize_x_pg\"\n",
+    "    write_output(code, code_name)\n",
+    "    try:\n",
+    "        # M1 Mac\n",
+    "        #compile_cmd = [\"clang++\", \"-Ofast\", \"-std=c++17\", \"-march=armv8.5-a\", \"-mtune=apple-m1\", \"-mcpu=apple-m1\", \"-o\", \"optimize_x_pg\", \"optimize_x_pg.cpp\"]\n",
+    "        # Ubuntu\n",
+    "        compile_cmd = [\"g++\", \"-O2\", \"-o\", code_name, code_name + \".cpp\"]\n",
+    "        compile_result = subprocess.run(compile_cmd, check=True, text=True, capture_output=True)\n",
+    "        run_cmd = [\"./\" + code_name]\n",
+    "        run_result = subprocess.run(run_cmd, check=True, text=True, capture_output=True)\n",
+    "        return run_result.stdout\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        return f\"An error occurred:\\n{e.stderr}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "9a2274f1-d03b-42c0-8dcc-4ce159b18442",
    "metadata": {},
    "outputs": [],
@@ -814,14 +827,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "f1303932-160c-424b-97a8-d28c816721b2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7869\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7872/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7869/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -834,14 +855,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "gio: http://127.0.0.1:7872/: Operation not supported\n"
+      "gio: http://127.0.0.1:7869/: Operation not supported\n"
      ]
     },
     {
      "data": {
       "text/plain": []
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,14 +890,6 @@
     "\n",
     "ui.launch(inbrowser=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50b4eb2e-4f1e-4dd8-bad4-53f8ed049939",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
