--- a/Notebook/path/ed-donner_llm/week5/day4.0_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week5/day4.0_ja.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## 専門知識労働者\n",
     "- 保険テクノロジー企業である Insurellm の従業員が使用する、専門知識を持つナレッジ ワーカーである質問応答エージェント。エージェントは正確である必要があり、ソリューションは低コストである必要があります。\n",
-    "- このプロジェクトでは、RAG（検索拡張生成）を使用して、質問/回答アシスタントが高い精度を確保します。ココ、4.5つめの実装では、RAGのVDBであるChromaをFAISSに切り替えChatインターフェイスから試行します。"
+    "- このプロジェクトでは、RAG（検索拡張生成）を使用して、質問/回答アシスタントが高い精度を確保します。ココ、4つめの実装では、RAGをChatインターフェイスから試行します。"
    ]
   },
   {
@@ -28,35 +28,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94a564ed-5cda-42d9-aada-2a5e85d02d15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: faiss-cpu in /home/seigi/.python3_venv/lib/python3.12/site-packages (1.11.0.post1)\n",
-      "Requirement already satisfied: numpy<3.0,>=1.25.0 in /home/seigi/.python3_venv/lib/python3.12/site-packages (from faiss-cpu) (2.2.6)\n",
-      "Requirement already satisfied: packaging in /home/seigi/.python3_venv/lib/python3.12/site-packages (from faiss-cpu) (25.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# FAISS-CPUをインストールしてください！\n",
-    "# Macユーザー - 最近のバージョンのmacosを持っていない場合、これは失敗する可能性があります\n",
-    "# その場合、このラボをスキップすることをお勧めします。FAISSは必須ではありません！ （または、必要に応じてmacosをアップグレードします。）\n",
-    "\n",
-    "!pip install faiss-cpu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "802137aa-8a74-45e0-a487-d1974927d7ca",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# langchain、FAISS のインポート\n",
+    "# langchain、Chroma のインポート\n",
     "\n",
     "# langchain\n",
     "from langchain.document_loaders import DirectoryLoader, TextLoader\n",
@@ -67,17 +45,13 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
     "\n",
-    "# VDBサポート (FAISS)\n",
-    "# from langchain_chroma import Chroma\n",
-    "from langchain.vectorstores import FAISS\n",
-    "\n",
-    "# プレウォーク（表示は割愛）\n",
-    "import numpy as np"
+    "# VDBサポート (langchain_chroma)\n",
+    "from langchain_chroma import Chroma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "58c85082-e417-4708-9efe-81a5d55d1424",
    "metadata": {},
    "outputs": [],
@@ -91,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ee78efcb-60fe-449e-a944-40bab26261af",
    "metadata": {},
    "outputs": [],
@@ -103,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "730711a9-6ffe-4eee-8f48-d6cfb7314905",
    "metadata": {},
    "outputs": [],
@@ -130,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7310c9c8-03c1-4efc-a104-5e89aec6db1a",
    "metadata": {},
    "outputs": [
@@ -151,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "78998399-ac17-4e28-b15f-0b5f51e6ee23",
    "metadata": {},
    "outputs": [
@@ -159,58 +133,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 123 vectors with 1,536 dimensions in the vector store\n"
+      "Vectorstore created with 123 documents\n"
      ]
     }
    ],
    "source": [
     "# 各チャンクに埋込ベクトルを関連付けるVDBに格納\n",
     "# Chroma は SQLite ベースの人気のOSS VDB\n",
-    "# FAISS は Facebook（Meta）製の高性能なOSS VDBライブラリ\n",
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "# VectorStoreを作成します\n",
-    "# 前\n",
-    "# vectorStore = chroma.from_documents（documents = chunks、embedding = embeddings、fersting_directory = db_name）\n",
-    "# 後\n",
-    "vectorstore = FAISS.from_documents(chunks, embedding=embeddings)\n",
+    "# Huggingfaceのフリーのベクトル埋め込みを使用したい場合\n",
+    "# 次と、embeddings = OpenAIEmbeddings() を交換します：\n",
     "\n",
-    "total_vectors = vectorstore.index.ntotal\n",
-    "dimensions = vectorstore.index.d\n",
+    "# from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "# embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
     "\n",
-    "print(f\"There are {total_vectors} vectors with {dimensions:,} dimensions in the vector store\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "057868f6-51a6-4087-94d1-380145821550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# プレウォーク（Chroma → FAISS）で変更あり\n",
-    "vectors = []\n",
-    "documents = []\n",
-    "doc_types = []\n",
-    "colors = []\n",
-    "color_map = {'products':'blue', 'employees':'green', 'contracts':'red', 'company':'orange'}\n",
+    "# Chroma DataStoreがすでに存在するかどうかを確認してください - もしそうなら、コレクションを削除してゼロから始める\n",
     "\n",
-    "for i in range(total_vectors):\n",
-    "    vectors.append(vectorstore.index.reconstruct(i))\n",
-    "    doc_id = vectorstore.index_to_docstore_id[i]\n",
-    "    document = vectorstore.docstore.search(doc_id)\n",
-    "    documents.append(document.page_content)\n",
-    "    doc_type = document.metadata['doc_type']\n",
-    "    doc_types.append(doc_type)\n",
-    "    colors.append(color_map[doc_type])\n",
-    "    \n",
-    "vectors = np.array(vectors)"
+    "if os.path.exists(db_name):\n",
+    "    Chroma(persist_directory=db_name, embedding_function=embeddings).delete_collection()\n",
+    "\n",
+    "# Chroma VectorStoreを作成してください！\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(documents=chunks, embedding=embeddings, persist_directory=db_name)\n",
+    "print(f\"Vectorstore created with {vectorstore._collection.count()} documents\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a468710-a866-4d2f-b5dc-bc2654c7b9d1",
+   "id": "31c94e91-a6b6-400d-a16d-a66a1d0ca3a4",
    "metadata": {},
    "source": [
     "## ベクトルストアの可視化\n",
@@ -226,8 +178,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ba8a5e7-965d-4770-a12d-532aff50c4b5",
+   "metadata": {},
+   "source": [
+    "<table style=\"margin: 0; text-align: left;\">\n",
+    "    <tr>\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../important.jpg\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            <h2 style=\"color:#900;\">必ずお読みください！非推奨警告を無視してください</h2>\n",
+    "            <span style=\"color:#900;\">次のセルを実行すると、LangChainメモリのシンプルな使用方法に関するLangChainDeprecationWarningが表示されます。LangChainは、メモリに関する新しいアプローチへの移行を求めています。私はこれにかなり抵抗を感じています。新しいアプローチでは、LangGraphに移行し、そのエコシステムを深く理解する必要があります。LangGraphにはかなりの学習とコーディングが必要ですが、正直なところ、私たちのケースではあまりメリットがありません。<br/><br/>\n",
+    "                コースに組み込むかどうか、またどのように組み込むかについては検討中ですが、今のところは非推奨警告を無視してコードをそのまま使用してください。LangChainがConversationBufferMemoryをすぐに削除する予定はありません。\n",
+    "            </span>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "129c7d1e-0094-4479-9459-f9360b95f244",
    "metadata": {},
    "outputs": [
@@ -235,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30640/831555549.py:5: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "/tmp/ipykernel_30499/831555549.py:5: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
       "  memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n"
      ]
     }
@@ -256,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "968e7bf2-e862-4679-a11f-6c1efb6ec8ca",
    "metadata": {},
    "outputs": [
@@ -264,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Insurellm is an innovative insurance tech firm founded in 2015 by Avery Lancaster, designed to disrupt the insurance industry with its unique products. The company offers four primary software products: Carllm for auto insurance, Homellm for home insurance, Rellm for the reinsurance sector, and Marketllm, a marketplace connecting consumers with insurance providers. With 200 employees and over 300 clients worldwide, Insurellm operates 12 offices across the United States, focusing on transforming and modernizing the insurance landscape.\n"
+      "Insurellm is an insurance tech startup founded in 2015 by Avery Lancaster, aimed at disrupting the insurance industry with innovative products. The company has grown to 200 employees and operates 12 offices across the US, offering four main software products: Carllm for auto insurance, Homellm for home insurance, Rellm for the reinsurance sector, and Marketllm, a marketplace connecting consumers with insurance providers. With over 300 clients worldwide, Insurellm is focused on transforming the insurance landscape through technology and innovation.\n"
      ]
     }
    ],
@@ -288,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "c3536590-85c7-4155-bd87-ae78a1467670",
    "metadata": {},
    "outputs": [],
@@ -302,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b252d8c1-61a8-406d-b57a-8f708a62b014",
    "metadata": {},
    "outputs": [
@@ -310,14 +282,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
